Update GIVE ME BOBA.html

--- a/GIVE ME BOBA.html
+++ b/GIVE ME BOBA.html
@@ -1,4 +1,4 @@
 <p>GIVE ME BOBA</p>
   <p>PLEASE</p>
     <p>AUAUAGUGHHGHGHHHHHHH</p>
-      <img src="https://www.bing.com/images/search?view=detailV2&ccid=2d406auj&id=8775A9B6EA4CE14C635E18CAAC999DF046D8314E&thid=OIP.2d406aujbsCuFNgpeiZzjAHaIX&mediaurl=https%3a%2f%2ft.furaffinity.net%2f38116960%40800-1599535599.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.d9de34e9aba36ec0ae14d8297a26738c%3frik%3dTjHYRvCdmazKGA%26pid%3dImgRaw%26r%3d0&exph=600&expw=531&q=halo+elite+fanart&simid=608016285972765765&FORM=IRPRST&ck=7CB9A58B2EF3AC3B428DA4E8E15E128C&selectedIndex=58&itb=0" />
+      <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/CLO22_TechOffice_046-1?wid=859&hei=490" />
